force-app/main/default/objects/UrjanetSettings__c/UrjanetSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Arcadia Connect App</description>
    <label>Arcadia Settings</label>
</CustomObject>