force-app/main/default/objects/UrjanetSettings__c/fields/APIPageSize__c.field-meta.xml
<CustomField>
    <fullName>APIPageSize__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Number of records to be returned in every page from the APIs</description>
    <inlineHelpText>Number of records to be returned in every page from the APIs</inlineHelpText>
    <label>API Page Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>