force-app/main/default/objects/UrjanetSettings__c/fields/DevelopmentOrg__c.field-meta.xml
<CustomField>
    <fullName>DevelopmentOrg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if the org is a development Org</description>
    <label>DevelopmentOrg</label>
    <type>Checkbox</type>
</CustomField>