force-app/main/default/objects/UrjanetSettings__c/fields/OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationId__c</fullName>
    <description
    >A field to store Arcadia’s Organization Id (which is the back part of the unique URL) https://connect.urjanet.com/&lt;Organization Id&gt;</description>
    <externalId>true</externalId>
    <label>Organization Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>