force-app/main/default/objects/UrjanetSettings__c/fields/SyncBatchSize__c.field-meta.xml
<CustomField>
    <fullName>SyncBatchSize__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Number of Batch Size Limit</description>
    <inlineHelpText>Number of Batch Size Limit</inlineHelpText>
    <label>Sync Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>